YWS-392 Fixing gap in Project team block

--- a/components/CaseStudiesCommon/ProjectIdea/TeamSection/styles.module.scss
+++ b/components/CaseStudiesCommon/ProjectIdea/TeamSection/styles.module.scss
@@ -522,11 +522,11 @@
     &::before {
       content: '';
       display: inline-block;
-      width: 6px;
-      height: 6px;
+      width: 7px;
+      height: 7px;
       background: $bright-ocean-blue;
       border-radius: 50%;
-      margin-right: 16px;
+      margin-right: 10px;
     }
 
     @include phone {
