--- a/components/CaseStudiesCommon/ProjectIdea/styles.module.scss
+++ b/components/CaseStudiesCommon/ProjectIdea/styles.module.scss
@@ -812,7 +812,7 @@
   & > div:last-child {
     position: absolute;
     top: 53%;
-    left: 64.8%;
+    left: 64.5%;
 
     @include tablet {
       top: 40%;
